<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="395dp"
        android:layout_height="318dp"
        android:layout_marginBottom="36dp"
        android:gravity="center_vertical"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:onClick="value"
                android:text="@string/_1" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="value"
                android:text="@string/_2" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="value"
                android:text="@string/_3" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="operation"
                android:text="@string/pls" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:onClick="value"
                android:text="@string/_4" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="value"
                android:text="@string/_5" />

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="value"
                android:text="@string/_6" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="operation"
                android:text="@string/min" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button12"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:onClick="value"
                android:text="@string/_7" />

            <Button
                android:id="@+id/button11"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="value"
                android:text="@string/_8" />

            <Button
                android:id="@+id/button10"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="value"
                android:text="@string/_9" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="operation"
                android:text="@string/umn" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button16"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:onClick="value"
                android:text="@string/tch" />

            <Button
                android:id="@+id/button15"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="value"
                android:text="@string/_0" />

            <Button
                android:id="@+id/button14"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="operation"
                android:text="@string/rav" />

            <Button
                android:id="@+id/button13"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="operation"
                android:text="@string/del" />
        </TableRow>
    </TableLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="395dp"
        android:layout_height="190dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472">

        <TextView
            android:id="@+id/pole"
            android:layout_width="316dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/textview"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/clear"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="clear"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/ce"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="ce"
            android:text="@string/ce"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>